[metadata]
name = homework_exercise
description= homework package
author=Adam Okrasiński
version = 0.0.2

[options]
packages = homework_exercise
package_dir =
    =src
install_requires=
    numpy
    toml
    setuptools

[options.packages.find]
where = src
package_data =
    homework_exercise:data_file.json,data_file_2.toml